--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,7 @@
 		"default_popup": "__MSG_popup__"
 	},
 	"background": {
-		"scripts": ["sodium-asmjs.js","background.js"],
+		"scripts": ["BigInteger.js","sodium-asmjs.js","background.js"],
 		"persistent": false
 	}
 }
