--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,9 @@
 	"icons": {
 		"256": "icons/256.png"
 	},
+	"permissions": [
+		"storage"
+	],
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
@@ -27,7 +30,7 @@
 		"default_popup": "__MSG_popup__"
 	},
 	"background": {
-		"scripts": ["BigInteger.js","utils.js","sodium-asmjs.js","background.js"],
+		"scripts": ["bn.js","scrypt.js","utils.js","background.js"],
 		"persistent": false
 	}
 }
