background.js must listen for messages asap

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"description": "__MSG_description__",
 	"default_locale": "en",
 	"manifest_version": 2,
-	"version": "0.0.9",
+	"version": "0.0.11",
 	"homepage_url": "https://github.com/Jaaap/SQRL",
 	"applications": {
 		"gecko": {
@@ -30,7 +30,7 @@
 		"default_popup": "__MSG_popup__"
 	},
 	"background": {
-		"scripts": ["bn.js","scrypt.js","utils.js","background.js"],
+		"scripts": ["bn.js","utils.js","background.js","sodium-asmjs.js"],
 		"persistent": false
 	}
 }
