--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
 		"storage",
 		"tabs"
 	],
+	"content_security_policy": "script-src 'self'; object-src 'self'; img-src 'self'",
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
