Allow background to fetch sqrl from all domains

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
 	},
 	"permissions": [
 		"storage",
-		"tabs"
+		"tabs",
+		"https://*/*"
 	],
 	"content_security_policy": "script-src 'self'; object-src 'self'; img-src 'self'",
 	"content_scripts": [
