--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"description": "__MSG_description__",
 	"default_locale": "en",
 	"manifest_version": 2,
-	"version": "0.0.40",
+	"version": "0.0.41",
 	"homepage_url": "https://github.com/Jaaap/SQRL",
 	"applications": {
 		"gecko": {
@@ -18,7 +18,7 @@
 		"tabs",
 		"https://*/*"
 	],
-	"content_security_policy": "script-src 'self'; object-src 'self'; img-src 'self'",
+	"content_security_policy": "script-src 'self'; object-src 'self'; img-src data: 'self'",
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
